Fix #106467: Crash when loading files with custom node groups

Loading a blend file containing custom material node groups crashed Blender.
See #106467 for more information.

Pull Request: https://projects.blender.org/blender/blender/pulls/106559